<resources>
    <string name="app_name">MLS_View</string>
    <string name="main1">Данные компании</string>
    <string name="sector">Отрасль</string>
    <string name="subSector">Подотрасль</string>
    <string name="technologies1Lvl">Технологии. 1 уровень</string>
    <string name="technologies2Lvl">Технологии. 2 уровень</string>
    <string name="technologies3Lvl">Технологии. 3 уровень</string>
    <string name="okpd2">ОКПД2</string>
    <string name="description">Описание</string>
    <string name="check">Проверить</string>
    <string name="finish">Завершить</string>
    <string name="enter">Ввести</string>
    <string name="upload">Загрузить</string>
    <string name="text_start1">Самостоятельный ввод данных</string>
    <string name="text_start_1">Загрузка таблиц .xls или .csv</string>
    <string name="text_main_start">Проверка данных</string>
    <string name="text_main_2">Результаты проверки</string>
</resources>