<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ico_r" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="32sp"
            android:textColor="#474747"
            android:text="@string/text_main_start" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textColor="#8F9497"
            android:textSize="16sp"
            android:text="@string/text_start1"/>
        <Button
            android:id="@+id/btnText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="13dp"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:background="@drawable/button_background"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textColor="#8F9497"
            android:textSize="16sp"
            android:text="@string/text_start_1"/>
        <Button
            android:id="@+id/btnFile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="13dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:background="@drawable/button_background"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>