<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="#474747"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:text="@string/main1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/sector"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/sector"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/subSector"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/subSector"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/technologies1Lvl"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/technologies1Lvl"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/technologies2Lvl"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/technologies2Lvl"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/technologies3Lvl"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/technologies3Lvl"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/okpd2"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/okpd2"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="419dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_radius"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/description"
                    android:textColor="#8F9497"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/description"
                    android:textColorHint="#3D3F40"
                    android:background="#EEF0F4"
                    android:textColor="#3D3F40"
                    android:textSize="24sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_background"
                android:text="@string/check"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textColor="@color/white"/>

            <!--
            <Button
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_background"
                android:text="Загрузка?"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textColor="@color/white"/>
                -->

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

</androidx.drawerlayout.widget.DrawerLayout>